@@ -2,11 +2,14 @@
                tal:define="meeting context/getMeeting;
                            mayView python: view.tool.checkMayView(meeting);
                            itemNumber python: context.getItemNumber(relativeTo='meeting', for_display=True);
-                           totalNbOfItems python: meeting.numberOfItems();
                            firstItemNumber python:context.getSiblingItemNumber('first');
+                           firstItemNumberDisplay python: view.display_number(firstItemNumber);
                            previousItemNumber python:context.getSiblingItemNumber('previous');
+                           previousItemNumberDisplay python: previousItemNumber and view.display_number(previousItemNumber) or None;
                            nextItemNumber python:context.getSiblingItemNumber('next');
-                           lastItemNumber python:context.getSiblingItemNumber('last')">
+                           nextItemNumberDisplay python: nextItemNumber and view.display_number(nextItemNumber) or None;
+                           lastItemNumber python:context.getSiblingItemNumber('last');
+                           lastItemNumberDisplay python: view.display_number(lastItemNumber);">
 
     <tal:comment replace="nothing">Go to the meeting</tal:comment>
     <a href="#" tal:attributes="href string:${meeting/absolute_url}">
@@ -15,35 +18,34 @@
     </a>
 
     <tal:comment replace="nothing">Go to the first item</tal:comment>
-    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber:float=${firstItemNumber}">
+    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber=${firstItemNumberDisplay}">
         <img tal:condition="python: itemNumber != firstItemNumber"
              style="cursor:pointer" title="pm_goto_first" i18n:attributes="title"
              tal:attributes="src string: ${view/portal_url}/arrowLeftDouble.png;"/>
     </a>
 
     <tal:comment replace="nothing">Go to the previous item</tal:comment>
-    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber:float=${previousItemNumber}">
+    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber=${previousItemNumberDisplay}">
         <img tal:condition="previousItemNumber" style="cursor:pointer"
              title="pm_goto_previous" i18n:attributes="title"
              tal:attributes="src string: ${view/portal_url}/arrowLeftSimple.png;"/>
     </a>
 
-    <tal:comment replace="nothing">Explain which item is currently shown.
-        Show total number of items only if the user has the permission to view the last item).</tal:comment>
+    <tal:comment replace="nothing">Number of last item.</tal:comment>
     <span class="discreet">
         <span i18n:domain="plone" i18n:translate="">MeetingItem</span>&nbsp;
-        <span tal:replace="itemNumber"/><span tal:condition="lastItemNumber"> / <span tal:replace="totalNbOfItems"/></span>
+        <span tal:replace="itemNumber"/><span tal:condition="lastItemNumber"> / <span tal:replace="lastItemNumberDisplay"/></span>
     </span>
 
     <tal:comment replace="nothing">Go to the next item</tal:comment>
-    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber:float=${nextItemNumber}">
+    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber=${nextItemNumberDisplay}">
         <img tal:condition="nextItemNumber" style="cursor:pointer"
              title="pm_goto_next" i18n:attributes="title"
              tal:attributes="src string: ${view/portal_url}/arrowRightSimple.png;"/>
     </a>
 
     <tal:comment replace="nothing">Go to the last item</tal:comment>
-    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber:float=${lastItemNumber}">
+    <a href="#" tal:attributes="href string:${context/absolute_url}/@@object_goto?itemNumber=${lastItemNumberDisplay}">
         <img tal:condition="python: itemNumber != lastItemNumber"
              style="cursor:pointer" title="pm_goto_last" i18n:attributes="title"
              tal:attributes="src string: ${view/portal_url}/arrowRightDouble.png;"/>
@@ -55,9 +57,9 @@
         &nbsp;&nbsp;<input id="goto_meeting"
                            type="text"
                            size="3"
-                           tal:attributes="onKeyPress string:if (event.keyCode==13) gotoItem($(this), $totalNbOfItems);" />
+                           tal:attributes="onKeyPress string:if (event.keyCode==13) gotoItem($(this), $lastItemNumberDisplay);" />
         <img tal:attributes="src string: ${view/portal_url}/gotoItem.png;
-                             onClick string:javascript:gotoItem($$('input#goto_meeting'), ${totalNbOfItems});"
+                             onClick string:javascript:gotoItem($$('input#goto_meeting'), ${lastItemNumberDisplay});"
              style="cursor:pointer"/>
     </span>
 </div>
