@@ -90,6 +90,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added possibility to generate a PodTemplate on an advice
 - Added possibility to use subnumber on items of the meeting so it is possible to use 1, 1.1, 1.2, ...
   for numbering items on the meeting, this way we may manage items "without a number"
+- When redefining item assembly/excused/absents, show what is strored on the meeting for each fields
 
 3.3 (2015-02-27)
 ----------------
